# center_of_blob

./: README.md  analyze.py  main.py  make_exe.bat  make_exe.sh  pyproject.toml  requirements.txt  setup.cfg  wine_install.txt
.github/workflows/: build_exe.yaml  code_checks.yaml  tests.yaml
center_of_blob/: __init__.py  analyze.py  boxed_range_slider.py  centers.py  channels.py  draw.py  main.py  main_image.py  mwe.py  popups.py  range_slider.py  region.py  testing.py  widgets.py
center_of_blob/structs/: __init__.py  centers.py  region.py
center_of_blob/tests/: conftest.py  test_load.py
center_of_blob/util/: __init__.py  draw.py
center_of_blob/widgets/: __init__.py  boxed_range_slider.py  panel.py  range_slider.py
tests/: actions.py  data.py  test_basic.py  test_brightness.py  test_csv.py  test_image_loading.py  test_menubar.py  test_modify_centers.py  test_origin.py  test_regions.py
tests/data/: sample.csv
