[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "center_of_blob"
authors = [
    {name = "Richard Shadrach", email = "rhshadrach@gmail.com"},
]
description = "Center of Blob"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "imageio",
    "matplotlib",
    "numpy",
    "pandas",
    "pillow",
    "PyQt5",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "shapely",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "center_of_blob/VERSION"}

[project.optional-dependencies]
lint = [
    "black",
    "codespell",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "pylint",
    "pyright",
    "pyupgrade",
    "ruff",
    "vulture",
]
build = ["pyinstaller"]
test = ["pytest", "pytest-qt", "pytest-xvfb", "pytest-xdist"]
dev = ["center_of_blob[lint, build, test]"]

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "-n auto"
